...
        android:fillViewport="true"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset">

        <LinearLayout
            android:id="@+id/layout_content_vert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:orientation="vertical">

...
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/titulo" />

            <EditText
                android:id="@+id/etTitulo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/amiko"
                android:hint="@string/t_tulo_de_la_pel_cula"
...
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/a_o" />

            <EditText
                android:id="@+id/etAño"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="6dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
...
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/g_nero" />

            <Spinner
                android:id="@+id/listaGenero"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="6dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
...
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/director" />

            <EditText
                android:id="@+id/etDirector"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="6dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
...
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/actor1" />

            <EditText
                android:id="@+id/etActor1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="6dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
...
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/actor2" />

            <EditText
                android:id="@+id/etActor2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="6dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
...
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/actor3" />

            <EditText
                android:id="@+id/etActor3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="6dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
...
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/actor4" />

            <EditText
                android:id="@+id/etActor4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="6dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
...
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/descripci_n" />

            <EditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="6dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
...
                android:textSize="16sp"
                android:inputType="textMultiLine"
                android:maxLength="500"
                android:labelFor="@+id/tvDescripcion" />

            <Button
                android:id="@+id/sendForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginStart="6dp"
                android:background="@android:color/holo_red_light"
...
