...
    <string name="actor1">Actor1:</string>
    <string name="actor2">Actor2:</string>
    <string name="actor3">Actor3:</string>
    <string name="actor4">Actor4:</string>
    <string name="a_o">Año:</string>
    <string name="usuario">Usuario:</string>
    <string name="enviar">Enviar</string>
    <string name="g_nero">Género:</string>
    <string name="descripci_n">Descripción:</string>
    <string name="lope_de_vega">Lope de Vega</string>
    <string name="t_tulo_de_la_pel_cula">título de la película</string>
    <string name="lorem_ipsum_esta_peli_es_muy_chula_me_encanta_cuando_saldra_una_nueva">Lorem Ipsum esta peli es muy chula me encanta cuando saldra una nueva</string>
    <string name="nombre_del_director">nombre del director</string>
...
